Created dynamic maze generation alogorithm. Still testing it.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -149,6 +149,12 @@ input.fullList
     width: 30px;
 }
 
+.wall-square
+{
+    height: 30px;
+    width: 30px;
+}
+
 .wall
 {
     background-color: darkblue;
