--- a/public/css/main.css
+++ b/public/css/main.css
@@ -185,8 +185,23 @@ td{
   padding: 0;
   border-collapse: collapse;
   margin: 0;
-  border: none;
+  border: 1px solid black;
 }
+
+
+table.stats {
+    border-collapse: collapse;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+table.stats th, table.stats td {
+    text-align: left;
+    padding: 8px;
+}
+
+table.stats tr:nth-child(even){background-color: #f2f2f2}
 
 a
 {
