--- a/public/css/main.css
+++ b/public/css/main.css
@@ -242,7 +242,10 @@ div > h1 {
     color: white;
 }
 
-table.stats tr:nth-child(even){background-color: #f2f2f2}
+table.stats tr:nth-child(even){
+  background-color: #f2f2f2;
+  color: black;
+}
 
 a
 {
